# Esprit-PIDS-4DS2-2026-agrio

./: .gitattributes  .gitignore  README.md  SETUP.md  package-lock.json
backend/: .env.example  .gitignore  README.md  alembic.ini  check_alerts.py  check_tokens.py  docker-compose.yml  pyproject.toml  reset_demo.py
backend/alembic/: env.py
backend/app/: di.py  main.py  settings.py
backend/app/api/v1/: gamification.py  notifications.py
backend/app/middleware/: auth.py  cors.py  logging.py  rate_limit.py  tenant.py
backend/app/modules/ai/: service.py
backend/app/modules/analytics/: kpis.py  models.py  repository.py  service.py
backend/app/modules/auth/: models.py  repository.py  service.py
backend/app/modules/community/: models.py  repository.py  service.py
backend/app/modules/disease/: advisor.py  models.py  repository.py  segmentation_service.py  service.py
backend/app/modules/farms/: models.py  repository.py  service.py
backend/app/modules/fertilizer/: service.py
backend/app/modules/gamification/: models.py  repository.py  service.py
backend/app/persistence/: base_model.py  db.py
backend/app/wokwi/: diagram.json  libraries.txt  wokwi.ino  wokwi.toml
backend/hardware/: wokwi.toml
backend/scripts/: refresh_all_prices.py  seed_daily_tasks.py  seed_market_prices.py  seed_produce_prices.py  warmup_forecasts.py  warmup_produce_forecasts.py
backend/tests/test_market_prices/: conftest.py  test_api.py  test_features.py  test_loader.py  test_models.py
backend/tests/unit/: test_features.py  test_loader.py  test_models.py
frontend/: .env.example  (+7 more)
(+282 files in other folders)
