[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agrio-backend"
version = "0.1.0"
description = "Agrio – smart agriculture platform backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.2.0",
    "bcrypt<5.0.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "paho-mqtt>=2.1.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "ultralytics>=8.3.0",
    "Pillow>=10.0.0",
    "joblib>=1.4.0",
    "statsmodels>=0.14.0",
    "prophet>=1.1.0",
    "lightgbm>=4.0.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.1",
    "lxml>=5.0.0",
    "pyarrow>=15.0.0",
    "plotly>=5.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
    "httpx>=0.28.0",
    "scikit-learn>=1.4.0",
    "psycopg2-binary>=2.9.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
